[package]
name = "http-ip2asn"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
flate2 = "1.1"
tokio = { version = "1.45", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util"] }
axum = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4.27"
reqwest = { version = "0.12.20", features = ["rustls-tls", "charset", "http2", "system-proxy"], default-features = false }
arc-swap = "1.7.1"
tracing = "0.1.41"
thiserror = "2.0.12"
tower-http = { version = "0.6.6", features = ["trace"] }
